# foosball-tracker

./: .gitignore  CMakeLists.txt  LICENSE  Optimizations.md  README.md  buildme  vcsm_udev.rules
neuralnet/: PixelNetModel_leaky.h5  PixelNetModel_leaky_weights.h5  PixelNetModel_unscaled.h5  PixelNetModel_unscaled_weights.h5  PixelNetNotebook.ipynb  traindata_noimages.npy  traindata_yesimages.npy
src/: BalltrackCore.c  BalltrackUtil.h  RaspiBalls.c  RaspiTex.h  RaspiTexBalls.c  RaspiVidBalls.c
src/balltrackshaders/: Makefile  allshaders.h  display.frag  phase1.frag  phase2.frag  vshader.vert
src/gl_scenes/: balltrack.c
src/player/: triangle.c  video.c
src/recorder/: BalltrackScene.c  BalltrackScene.h  RaspiCamControl.c  RaspiCommonSettings.c  RaspiTexBalls.c
src/tracker/: BallAnalysis.cpp  BallAnalysis.h  BalltrackCore.cpp  BalltrackCore.h  BalltrackUtil.c  BalltrackUtil.cpp  BalltrackUtil.h  analysis.cpp  analysis.h  core.cpp  core.h  tga.h  util.cpp  util.h
src/tracker/balltrackshaders/: Makefile  allshaders.h  colorfilterball.frag  debug.frag  diff.frag  downsample.frag  fixedcolor.frag  huefilterball.frag  huefilterfield.frag  phase2_dilatered.frag  phase3.frag  simple.frag  vshader_yflip.vert  yuvsource.frag
webproxy/: generate-replay.sh  player  replay.sh  run-camera.sh  webproxy.py
